--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,19 @@
 # Permalinks
-#
-# Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             ''
-paginate:            5
+title:               'map(planA, ~ get_planB(.))'
+tagline:             'Asako Mikami'
+description:         'I write this blog to keep myself accountable.'
+url:                 https://amikami102.github.io
+baseurl:             'https://github.com/amikami102.github.io/'
+paginate:            3
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Asako Mikami
+  url:               https://github.com/amikami102
+  email:             asakomikami@gmail.com
 
 # Custom vars
 version:             1.0.0
