--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 permalink:           pretty
 
 # Setup
-title:               'map(planA, ~ get_planB(.))'
+title:               'map and pipe operator'
 tagline:             'Asako Mikami'
-description:         'I write this blog to keep myself accountable.'
+description:         'I write this blog to keep myself accountable. The title is attributed to my favorite `R` functions.'
 url:                  ''
 baseurl:             /
 paginate:            3
