--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 title:               'map and pipe operator'
 tagline:             'Asako Mikami'
 description:         'I write this blog to keep myself accountable. The title is attributed to my favorite `R` functions.'
-url:                  ''
+url:                  https://amikami102.github.io
 baseurl:             /
 paginate:            3
 
