--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ paginate:            3
 author:
   name:              Asako Mikami
   url:               https://github.com/amikami102
-  email:             asakomikami@gmail.com
+  email:             afmikami@bu.edu
 
 # Custom vars
 version:             1.0.0
