--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,6 @@ author:
 # Custom vars
 version:             1.0.0
 
-plugins: [jekyll-paginate]
+plugins: 
+  [jekyll-paginate]
+  [jekyll-twitter-plugin]
