fix twitter liquid tag

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:           pretty
 # Setup
 title:               'map and pipe operator'
 tagline:             'Asako Mikami'
-description:         'I write this blog to keep myself accountable. The title is attributed to my favorite `R` functions.'
+description:         'The title is attributed to my favorite `R` functions.'
 url:                  https://amikami102.github.io
 github.repo:          http://github.com/amikami102
 baseurl:              ""
@@ -20,5 +20,5 @@ author:
 version:             1.0.0
 
 plugins: 
-  - jekyll-paginate
-  - jekyll-twitter-plugin
+  - 'jekyll-paginate'
+  - 'jekyll-twitter-plugin'
