--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
 # Permalinks
 permalink:           pretty
 
-# Setup
-title:               'map and pipe operator'
-tagline:             'Asako Mikami'
-description:         'The title is attributed to my favorite `R` functions.'
-url:                  https://amikami102.github.io
-github.repo:          http://github.com/amikami102
-baseurl:              ""
-paginate:            3
+
+# Site settings
+title:                map and pipe operator # the title of our blog
+description:          'The title is attributed to my favorite R functions'
+baseurl:              "" # we won't need to set that in our case
+url:                  https://amikami102.github.io # set it like this for now but we'll have to change this before to send it live
+github_username:      amikami102 # your github username (if you have one)
+
+# Build settings
+markdown: kramdown
+paginate: 3 # number of posts you want per page
 
 # About/contact
 author:
@@ -21,4 +24,3 @@ version:             1.0.0
 
 plugins: 
   - jekyll-paginate
-  - jekyll-twitter-plugin
