--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ permalink:           pretty
 
 # Site settings
 title:                map and pipe operator # the title of our blog
+tagline:              Asako Mikami
 description:          'The title is attributed to my favorite R functions'
 baseurl:              "" # we won't need to set that in our case
 url:                  https://amikami102.github.io # set it like this for now but we'll have to change this before to send it live
