--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,12 @@ baseurl:              "" # we won't need to set that in our case
 url:                  https://amikami102.github.io # set it like this for now but we'll have to change this before to send it live
 github_username:      amikami102 # your github username (if you have one)
 
+
+
 # Build settings
 markdown: kramdown
 paginate: 3 # number of posts you want per page
+highlighter: rouge
 
 # About/contact
 author:
