--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:          'The title is attributed to two of my favorite R functions
 baseurl:              "" # we won't need to set that in our case
 url:                  https://amikami102.github.io # set it like this for now but we'll have to change this before to send it live
 github_username:      amikami102 # your github username (if you have one)
-
+disqus:               asakomikami
 
 
 # Build settings
